fixed loader sometimes shows scrollbar for a moment

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -63,7 +63,7 @@
 }
 
 body {
-  @apply bg-background text-foreground min-h-screen min-w-full;
+  @apply bg-background text-foreground min-h-screen min-w-full overflow-hidden;
 
   scroll-behavior: smooth;
 
